Completed 15-align-self exercice (corrected)

--- a/week-2/15-align-self/flexbox.css
+++ b/week-2/15-align-self/flexbox.css
@@ -16,8 +16,19 @@
 .countries--third {
   align-items: start;
 }
-.countries--third .country--croatia,
-.country--ethiopia,
-.country--laos {
+.countries--third .country--croatia {
+  align-self: end;
+}
+.countries--third .country--ethiopia {
+  align-self: end;
+}
+.countries--third .country--laos {
+  align-self: end;
+}
+.countries--fourth {
+  flex-direction: column;
+  align-items: start;
+}
+.countries--fourth .country--uganda {
   align-self: end;
 }
